@@ -1,3 +1,7 @@
+17 August 2021: Wouter
+	- Fix that --with-ssl can use "/usr/include/openssl11" to pass the
+	  location of a different openssl version.
+
 16 August 2021: George
 	- Merge PR #528 from fobser: Make sldns_str2wire_svcparam_buf()
 	  static.
